--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.70.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
+    "react-native-vector-icons": "^9.2.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
