--- a/ios/gameCard.xcodeproj/xcshareddata/xcschemes/gameCard.xcscheme
+++ b/ios/gameCard.xcodeproj/xcshareddata/xcschemes/gameCard.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "gameCard.app"
-               BlueprintName = "gameCard"
-               ReferencedContainer = "container:gameCard.xcodeproj">
+               BuildableName = "blueopen.app"
+               BlueprintName = "blueopen"
+               ReferencedContainer = "container:blueopen.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "gameCardTests.xctest"
-               BlueprintName = "gameCardTests"
-               ReferencedContainer = "container:gameCard.xcodeproj">
+               BuildableName = "blueopenTests.xctest"
+               BlueprintName = "blueopenTests"
+               ReferencedContainer = "container:blueopen.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "gameCard.app"
-            BlueprintName = "gameCard"
-            ReferencedContainer = "container:gameCard.xcodeproj">
+            BuildableName = "blueopen.app"
+            BlueprintName = "blueopen"
+            ReferencedContainer = "container:blueopen.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "gameCard.app"
-            BlueprintName = "gameCard"
-            ReferencedContainer = "container:gameCard.xcodeproj">
+            BuildableName = "blueopen.app"
+            BlueprintName = "blueopen"
+            ReferencedContainer = "container:blueopen.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
